# rust_android_common_lib

./: .env  .env.android  .env.ios  .gitmodules  Cargo.toml  README.md  build.rs  build_for_android.sh  gdb_rust.sh
example/android/app/: android_example_keystore.jks  build.gradle  dotenv.gradle
example/android/app/src/androidTest/java/com/rust/example/android/: ExampleInstrumentedTest.kt
example/android/app/src/debug/res/values/: strings.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example/android/app/src/main/java/com/rust/example/android/: MainActivity.kt
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/test/java/com/rust/example/android/: ExampleUnitTest.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
lldb/: android-native-debug
migrations/2019-11-20-110438_create_posts/: down.sql  up.sql
migrations/2019-11-21-063333_create_users/: down.sql  up.sql
src/: lib.rs  logger.rs
src/database/: mod.rs  models.rs  orm.rs  schema.rs  sqlite.rs
src/error/: mod.rs
src/my_log/: mod.rs
