[package]
name = "rust_android_common_lib"
version = "0.1.0"
authors = ["Guang1234567 <lihansey163@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log-panics = {version = "2.0.0", features = ["with-backtrace"]}
time = "0.1.42"
dotenv = "0.10"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14.0", default-features = false }
android_log = "0.1.3"
rusqlite = {version = "0.20.0", features = ["bundled"]}
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = "1.4.0"

[profile.release]
lto = true

[lib]
# 编译的动态库名字
name = "greetings"
# 编译类型 cdylib 指定为动态库
crate-type = ["cdylib", "staticlib"]
